# grpc-stacksmash

./: .dockerignore  .gitmodules  Dockerfile  build.sh
docker/: build.sh  cmake-toolchain.Dockerfile  grpc-toolchain.Dockerfile  protobuf-toolchain.Dockerfile  ubuntu-2004-toolchain.Dockerfile
src/: CMakeLists.txt
src/cmake/: cpack-configuration.cmake  cpp-configuration.cmake  openssl-configuration.cmake  sanitizers-configuration.cmake
src/greeter-service/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt  greeter.proto
